--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,3 +188,43 @@ header {
     }
   }
 }
+main {
+  .card {
+    display: flex;
+    flex-direction: column;
+    background-color: #c3cbdc;
+    align-items: center;
+    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
+    border-radius: 20px;
+    width: 200px;
+  }
+  .card__icon {
+    // height: 100px;
+  }
+  .card__time {
+    text-align: center;
+    font-size: 1.8rem;
+    background-color: #6e1da3;
+    padding: .25em 1em;
+    border-radius: 20px;
+    color: #ffff;
+    width: min-content;
+  }
+  .card__temperature {
+    text-align: center;
+    color: #6e1da3;
+    font-size: 3rem;
+  }
+  .card__conditions {
+    font-size: 1.5rem;
+  }
+  .card__wind-speed::before {    
+    content: '';
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background-image: url("../img/weather-icon/wind.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;  } 
+}
