--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@ body {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  z-index: -2;
 }
 nav {
   display: grid;
@@ -121,6 +122,42 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  .card-header {
+    position: relative;
+    display: flex;
+    opacity: 90%;
+    scale: 1.5;
+    background-image: linear-gradient(326deg, white, rgb(219, 217, 217));
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 20px;
+    min-height: 200px;
+    padding: 30px 30px;
+    padding-bottom: 10px;
+    background-image: linear-gradient(white, rgb(219, 217, 217));
+  }
+  .card-header-date {
+    position: absolute;
+    z-index: 2;
+    top: 20px;
+    left: 20px;
+    font-size: 1.3rem;
+    padding: .5em 1em;
+    border-radius: 20px;
+    background-color: #3a3a3a;
+    font-weight: bold;
+  }
+  .weather-img {
+    margin-top: 25px;
+    z-index: 3;
+    height: 80px;
+  }
+  .temperature-card {
+    color: #3a3a3a;
+    margin-top: -30px;
+    text-align: center;
+    font-size: 3.5rem;
+  }
   .sh {
     // background-color: #000;
     background-size: cover;
@@ -175,16 +212,13 @@ header {
     }
     .icon {
       grid-column: 1;
+      z-index: 2;
       height: 50px;
       margin-left: 15px;
       padding: 7px;
       border-radius: 3px;
       background-color: #a4508b;
       background-image: linear-gradient(326deg, #61224e 0%, #5f0a87 74%);
-      transition: 0.3s scale;
-      &:hover {
-        scale: 1.2;
-      }
     }
   }
 }
