--- a/css/main.css
+++ b/css/main.css
@@ -257,15 +257,52 @@ main .cards-container::-webkit-scrollbar-thumb {
   border-radius: 5px;
 }
 main .card {
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
   min-width: 230px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #c3cbdc;
   background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
   border-radius: 20px;
+}
+main .card:hover .card__info {
+  transform: translateX(0);
+}
+main .card__info {
+  position: absolute;
+  display: flex;
+  gap: 1px;
+  flex-direction: column;
+  justify-content: end;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(326deg, #61224e 0%, #5f0a87 74%);
+  transition: transform 0.3s;
+}
+main .card__info h3 {
+  color: white;
+  text-align: center;
+  font-size: 2.5rem;
+}
+main .card__info .diagram {
+  display: flex;
+  height: 130px;
+  rotate: X 180deg;
+  margin-bottom: 50px;
+  gap: 2px;
+}
+main .card__info .card__temp-bar {
+  flex: 1;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: white;
 }
 main .card__icon {
   height: 120px;
@@ -285,6 +322,7 @@ main .card__temperature {
 }
 main .card__description {
   font-size: 1.5rem;
+  text-align: center;
   font-weight: bold;
 }
 main .card__conditions {
