--- a/scss/main.scss
+++ b/scss/main.scss
@@ -250,15 +250,55 @@ main {
     border-radius: 5px;
   }
   .card {
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
     min-width: 230px;
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #c3cbdc;
     background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%);
     border-radius: 20px;
+    // &:hover .card__temperature {
+    //   color: white;
+    // }
+    &:hover .card__info {
+      transform: translateX(0);
+    }
+  }
+  .card__info {
+    position: absolute;
+    display: flex;
+    gap: 1px;
+    flex-direction: column;
+    justify-content: end;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(326deg, #61224e 0%, #5f0a87 74%);
+    transition: transform 0.3s;
+    h3 {
+      color: white;
+      text-align: center;
+      font-size: 2.5rem;
+    }
+    .diagram {
+      display: flex;
+      height: 130px;
+      rotate: X 180deg;
+      margin-bottom: 50px;
+      gap: 2px;
+    }
+    .card__temp-bar {
+      flex: 1;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+      background-color: white;
+    }
   }
   .card__icon {
     height: 120px;
@@ -278,6 +318,7 @@ main {
   }
   .card__description {
     font-size: 1.5rem;
+    text-align: center;
     font-weight: bold;
   }
   .card__conditions {
