silly refactor (class names changed & js structure)

--- a/css/main.css
+++ b/css/main.css
@@ -66,10 +66,10 @@ nav {
   height: 64px;
   font-size: 3rem;
 }
-nav .search-box {
+nav .nav__search-box {
   position: relative;
 }
-nav .search-option-box {
+nav .nav__search-input {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -77,50 +77,50 @@ nav .search-option-box {
   gap: 5px;
   width: 100%;
 }
-nav .search-option {
+nav .nav__search-input:focus {
+  outline: none;
+}
+nav .nav__browser-hint {
   text-align: center;
   background-color: #eeeeee;
   cursor: pointer;
   border: none;
   transition: 0.3s scale;
 }
-nav .search-option:hover {
+nav .nav__browser-hint:hover {
   scale: 1.05;
 }
-nav .search-input:focus {
-  outline: none;
-}
-nav .logo {
+nav .nav__logo {
   justify-self: flex-end;
   margin-right: 20px;
 }
-nav h1 {
+nav .nav__website-title {
   font-size: 3rem;
 }
-nav .logo-front {
+nav .nav__logo-bold {
   color: #6e1da3;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
-nav .logo-back {
+nav .nav__logo-thin {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
-nav .unit-btn {
+nav .nav__unit-btn {
   all: unset;
   margin-left: 5px;
   cursor: pointer;
 }
-nav .find-weather {
+nav .nav__find-weather {
   cursor: pointer;
   margin-left: 10px;
   background-color: transparent;
   border: none;
   transition: scale 1.3s;
 }
-nav .find-weather:hover {
+nav .nav__find-weather:hover {
   scale: 1.07;
 }
 
@@ -128,6 +128,9 @@ header {
   z-index: -1;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   margin-top: 30px;
   background-color: #a4508b;
   background-image: linear-gradient(326deg, #61224e 0%, #5f0a87 74%);
@@ -135,9 +138,6 @@ header {
   background-position-y: 90%;
   border-radius: 25px;
   min-height: 400px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 header .card-header {
   position: relative;
@@ -151,7 +151,7 @@ header .card-header {
   padding: 30px 30px;
   padding-bottom: 10px;
 }
-header .card-header-date {
+header .card-header__date {
   position: absolute;
   z-index: 2;
   opacity: 1;
@@ -164,24 +164,23 @@ header .card-header-date {
   color: white;
   font-weight: bold;
 }
-header .weather-img {
+header .card-header__weather-img {
   margin-top: 25px;
   z-index: 3;
   height: 90px;
 }
-header .temperature-card {
+header .card-header__temperature {
   color: #3a3a3a;
   text-align: center;
   font-size: 3.5rem;
 }
-header .sh {
+header .header__sh {
   background-size: cover;
   position: absolute;
   height: 100%;
   width: 100%;
 }
 header .rain-bg {
-  opacity: 30%;
   background-image: url("https://media2.giphy.com/media/Wmp1EOzVybWd13s5DB/giphy.gif?cid=6c09b952rpgzo51slmyo69c61l1u9qt7rl9m20q9xl1wmpv0&ep=v1_gifs_search&rid=giphy.gif&ct=s");
 }
 header .week-day {
@@ -212,7 +211,7 @@ header .conditions {
   background-image: linear-gradient(326deg, white, rgb(219, 217, 217));
   grid-template-areas: "wind-speed pressure" "feelslike temp";
 }
-header .weather-condition {
+header .conditions__weather-box {
   display: grid;
   grid-template-columns: 50px 1fr;
   grid-template-rows: 1fr;
@@ -220,13 +219,13 @@ header .weather-condition {
   align-items: center;
   color: rgb(29, 29, 29);
 }
-header .weather-condition p {
+header .conditions__weather-box p {
   text-align: center;
   font-weight: bold;
   font-size: 2.5rem;
   grid-column: 2;
 }
-header .weather-condition .icon {
+header .conditions__weather-box .conditions__icon {
   grid-column: 1;
   z-index: 2;
   height: 50px;
