--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,18 +60,15 @@ nav {
   .nav__search-box {
     position: relative;
   }
-  .nav__search-input {
+  .nav__browser-hints {
     position: absolute;
     display: flex;
     flex-direction: column;
     margin-top: 5px;
     gap: 5px;
     width: 100%;
-    &:focus {
-      outline: none;
-    }
   }
-  .nav__browser-hint {
+  .search-option {
     text-align: center;
     background-color: #eeeeee;
     cursor: pointer;
